// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gux-pagination-item-counts #render should render as expected (1) 1`] = `
<gux-pagination-buttons total-pages="0" current-page="0" layout="advanced" disabled="false">
  <div class="gux-pagination-buttons-container gux-advanced">
    <div class="gux-pagination-buttons-group">
      <gux-button-slot accent="ghost" icon-only="">
        <button title="First page" disabled="">
          <gux-icon size="small" decorative="" icon-name="fa/chevrons-left-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost" icon-only="">
        <button title="Previous page" disabled="">
          <gux-icon size="small" decorative="" icon-name="custom/chevron-left-small-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
    </div>
    <div class="gux-pagination-buttons-list-container">
    </div>
    <div class="gux-pagination-buttons-group">
      <gux-button-slot accent="ghost" icon-only="">
        <button title="Next page" disabled="">
          <gux-icon size="small" decorative="" icon-name="custom/chevron-right-small-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost" icon-only="">
        <button title="Last page" disabled="">
          <gux-icon size="small" decorative="" icon-name="fa/chevrons-right-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
    </div>
  </div>
</gux-pagination-buttons>
`;

exports[`gux-pagination-item-counts #render should render as expected (2) 1`] = `
<gux-pagination-buttons total-pages="10" current-page="1" layout="advanced" disabled="false">
  <div class="gux-pagination-buttons-container gux-advanced">
    <div class="gux-pagination-buttons-group">
      <gux-button-slot accent="ghost" icon-only="">
        <button title="First page" disabled="">
          <gux-icon size="small" decorative="" icon-name="fa/chevrons-left-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost" icon-only="">
        <button title="Previous page" disabled="">
          <gux-icon size="small" decorative="" icon-name="custom/chevron-left-small-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
    </div>
    <div class="gux-pagination-buttons-list-container">
      <gux-button-slot accent="ghost">
        <button class="gux-pagination-buttons-list-current" aria-label="Page 1 selected">
          1
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost">
        <button aria-label="Page 2">
          2
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost">
        <button aria-label="Page 3">
          3
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost">
        <button aria-label="Page 4">
          4
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost">
        <button aria-label="Page 5">
          5
        </button>
      </gux-button-slot>
      <gux-pagination-ellipsis-button totalpages="10">
      </gux-pagination-ellipsis-button>
      <gux-button-slot accent="ghost">
        <button aria-label="Page 10">
          10
        </button>
      </gux-button-slot>
    </div>
    <div class="gux-pagination-buttons-group">
      <gux-button-slot accent="ghost" icon-only="">
        <button title="Next page">
          <gux-icon size="small" decorative="" icon-name="custom/chevron-right-small-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost" icon-only="">
        <button title="Last page">
          <gux-icon size="small" decorative="" icon-name="fa/chevrons-right-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
    </div>
  </div>
</gux-pagination-buttons>
`;

exports[`gux-pagination-item-counts #render should render as expected (3) 1`] = `
<gux-pagination-buttons total-pages="10" current-page="5" layout="advanced" disabled="false">
  <div class="gux-pagination-buttons-container gux-advanced">
    <div class="gux-pagination-buttons-group">
      <gux-button-slot accent="ghost" icon-only="">
        <button title="First page">
          <gux-icon size="small" decorative="" icon-name="fa/chevrons-left-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost" icon-only="">
        <button title="Previous page">
          <gux-icon size="small" decorative="" icon-name="custom/chevron-left-small-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
    </div>
    <div class="gux-pagination-buttons-list-container">
      <gux-button-slot accent="ghost">
        <button aria-label="Page 1">
          1
        </button>
      </gux-button-slot>
      <gux-pagination-ellipsis-button totalpages="10">
      </gux-pagination-ellipsis-button>
      <gux-button-slot accent="ghost">
        <button aria-label="Page 4">
          4
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost">
        <button class="gux-pagination-buttons-list-current" aria-label="Page 5 selected">
          5
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost">
        <button aria-label="Page 6">
          6
        </button>
      </gux-button-slot>
      <gux-pagination-ellipsis-button totalpages="10">
      </gux-pagination-ellipsis-button>
      <gux-button-slot accent="ghost">
        <button aria-label="Page 10">
          10
        </button>
      </gux-button-slot>
    </div>
    <div class="gux-pagination-buttons-group">
      <gux-button-slot accent="ghost" icon-only="">
        <button title="Next page">
          <gux-icon size="small" decorative="" icon-name="custom/chevron-right-small-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost" icon-only="">
        <button title="Last page">
          <gux-icon size="small" decorative="" icon-name="fa/chevrons-right-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
    </div>
  </div>
</gux-pagination-buttons>
`;

exports[`gux-pagination-item-counts #render should render as expected (4) 1`] = `
<gux-pagination-buttons total-pages="10" current-page="5" layout="advanced" disabled="true">
  <div class="gux-pagination-buttons-container gux-advanced">
    <div class="gux-pagination-buttons-group">
      <gux-button-slot accent="ghost" icon-only="">
        <button title="First page" disabled="">
          <gux-icon size="small" decorative="" icon-name="fa/chevrons-left-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost" icon-only="">
        <button title="Previous page" disabled="">
          <gux-icon size="small" decorative="" icon-name="custom/chevron-left-small-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
    </div>
    <div class="gux-pagination-buttons-list-container">
      <gux-button-slot accent="ghost">
        <button disabled="" aria-label="Page 1">
          1
        </button>
      </gux-button-slot>
      <gux-pagination-ellipsis-button disabled="" totalpages="10">
      </gux-pagination-ellipsis-button>
      <gux-button-slot accent="ghost">
        <button disabled="" aria-label="Page 4">
          4
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost">
        <button disabled="" class="gux-pagination-buttons-list-current" aria-label="Page 5 selected">
          5
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost">
        <button disabled="" aria-label="Page 6">
          6
        </button>
      </gux-button-slot>
      <gux-pagination-ellipsis-button disabled="" totalpages="10">
      </gux-pagination-ellipsis-button>
      <gux-button-slot accent="ghost">
        <button disabled="" aria-label="Page 10">
          10
        </button>
      </gux-button-slot>
    </div>
    <div class="gux-pagination-buttons-group">
      <gux-button-slot accent="ghost" icon-only="">
        <button title="Next page" disabled="">
          <gux-icon size="small" decorative="" icon-name="custom/chevron-right-small-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost" icon-only="">
        <button title="Last page" disabled="">
          <gux-icon size="small" decorative="" icon-name="fa/chevrons-right-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
    </div>
  </div>
</gux-pagination-buttons>
`;

exports[`gux-pagination-item-counts #render should render as expected (5) 1`] = `
<gux-pagination-buttons total-pages="0" current-page="0" layout="simple" disabled="false">
  <div class="gux-pagination-buttons-container gux-simple">
    <div class="gux-pagination-buttons-group">
      <gux-button-slot accent="ghost" icon-only="">
        <button title="First page" disabled="">
          <gux-icon size="small" decorative="" icon-name="fa/chevrons-left-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost" icon-only="">
        <button title="Previous page" disabled="">
          <gux-icon size="small" decorative="" icon-name="custom/chevron-left-small-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
    </div>
    <div class="gux-pagination-buttons-list-container">
    </div>
    <div class="gux-pagination-buttons-group">
      <gux-button-slot accent="ghost" icon-only="">
        <button title="Next page" disabled="">
          <gux-icon size="small" decorative="" icon-name="custom/chevron-right-small-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost" icon-only="">
        <button title="Last page" disabled="">
          <gux-icon size="small" decorative="" icon-name="fa/chevrons-right-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
    </div>
  </div>
</gux-pagination-buttons>
`;

exports[`gux-pagination-item-counts #render should render as expected (6) 1`] = `
<gux-pagination-buttons total-pages="10" current-page="1" layout="simple" disabled="false">
  <div class="gux-pagination-buttons-container gux-simple">
    <div class="gux-pagination-buttons-group">
      <gux-button-slot accent="ghost" icon-only="">
        <button title="First page" disabled="">
          <gux-icon size="small" decorative="" icon-name="fa/chevrons-left-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost" icon-only="">
        <button title="Previous page" disabled="">
          <gux-icon size="small" decorative="" icon-name="custom/chevron-left-small-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
    </div>
    <div class="gux-pagination-buttons-list-container">
      <gux-button-slot accent="ghost">
        <button class="gux-pagination-buttons-list-current" aria-label="Page 1 selected">
          1
        </button>
      </gux-button-slot>
      <gux-pagination-ellipsis-button totalpages="10">
      </gux-pagination-ellipsis-button>
      <gux-button-slot accent="ghost">
        <button aria-label="Page 10">
          10
        </button>
      </gux-button-slot>
    </div>
    <div class="gux-pagination-buttons-group">
      <gux-button-slot accent="ghost" icon-only="">
        <button title="Next page">
          <gux-icon size="small" decorative="" icon-name="custom/chevron-right-small-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost" icon-only="">
        <button title="Last page">
          <gux-icon size="small" decorative="" icon-name="fa/chevrons-right-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
    </div>
  </div>
</gux-pagination-buttons>
`;

exports[`gux-pagination-item-counts #render should render as expected (7) 1`] = `
<gux-pagination-buttons total-pages="10" current-page="5" layout="simple" disabled="false">
  <div class="gux-pagination-buttons-container gux-simple">
    <div class="gux-pagination-buttons-group">
      <gux-button-slot accent="ghost" icon-only="">
        <button title="First page">
          <gux-icon size="small" decorative="" icon-name="fa/chevrons-left-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost" icon-only="">
        <button title="Previous page">
          <gux-icon size="small" decorative="" icon-name="custom/chevron-left-small-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
    </div>
    <div class="gux-pagination-buttons-list-container">
      <gux-button-slot accent="ghost">
        <button class="gux-pagination-buttons-list-current" aria-label="Page 5 selected">
          5
        </button>
      </gux-button-slot>
      <gux-pagination-ellipsis-button totalpages="10">
      </gux-pagination-ellipsis-button>
      <gux-button-slot accent="ghost">
        <button aria-label="Page 10">
          10
        </button>
      </gux-button-slot>
    </div>
    <div class="gux-pagination-buttons-group">
      <gux-button-slot accent="ghost" icon-only="">
        <button title="Next page">
          <gux-icon size="small" decorative="" icon-name="custom/chevron-right-small-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost" icon-only="">
        <button title="Last page">
          <gux-icon size="small" decorative="" icon-name="fa/chevrons-right-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
    </div>
  </div>
</gux-pagination-buttons>
`;

exports[`gux-pagination-item-counts #render should render as expected (8) 1`] = `
<gux-pagination-buttons total-pages="10" current-page="5" layout="simple" disabled="true">
  <div class="gux-pagination-buttons-container gux-simple">
    <div class="gux-pagination-buttons-group">
      <gux-button-slot accent="ghost" icon-only="">
        <button title="First page" disabled="">
          <gux-icon size="small" decorative="" icon-name="fa/chevrons-left-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost" icon-only="">
        <button title="Previous page" disabled="">
          <gux-icon size="small" decorative="" icon-name="custom/chevron-left-small-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
    </div>
    <div class="gux-pagination-buttons-list-container">
      <gux-button-slot accent="ghost">
        <button disabled="" class="gux-pagination-buttons-list-current" aria-label="Page 5 selected">
          5
        </button>
      </gux-button-slot>
      <gux-pagination-ellipsis-button disabled="" totalpages="10">
      </gux-pagination-ellipsis-button>
      <gux-button-slot accent="ghost">
        <button disabled="" aria-label="Page 10">
          10
        </button>
      </gux-button-slot>
    </div>
    <div class="gux-pagination-buttons-group">
      <gux-button-slot accent="ghost" icon-only="">
        <button title="Next page" disabled="">
          <gux-icon size="small" decorative="" icon-name="custom/chevron-right-small-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost" icon-only="">
        <button title="Last page" disabled="">
          <gux-icon size="small" decorative="" icon-name="fa/chevrons-right-regular">
          </gux-icon>
        </button>
      </gux-button-slot>
    </div>
  </div>
</gux-pagination-buttons>
`;
